--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-      body { font-family: 'Droid Serif'; font-size: 150%; }
+      body { font-family: 'Droid Serif'; font-size: 200%; }
 
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
@@ -136,6 +136,38 @@ be run from the first VM, `node1`**.]
 
 
 ---
+##Storage
+
+
+|Tired|  |Wired|
+|---|----|---|
+|SAN |  | DAS|
+|15k|  | NVMe|
+|SAS |  |SATA|
+|2.5"|  | 3.5" FH|
+
+--
+🙏 NetApp
+
+EMC door Dell vd beurs gehaald → onderzoek
+
+
+---
+
+## Conway's Law
+```
+  organizations which design systems ...
+  are constrained to produce designs which
+  are copies of the communication structures of these organizations
+```
+
+
+.right[Melvin Conway, 1968]
+
+
+Therefore: Make sure the organization is compatible with the product architecture.
+
+---
 ## Eerste stappen
 
 - stap over naar dagelijks gebruik Linux/Unix, bv
@@ -207,17 +239,6 @@ Kies een specialisatie
 
   - running distributed systems on clusters
 
----
-
-## Conway's Law
-```
-  organizations which design systems ...
-  are constrained to produce designs which
-  are copies of the communication structures of these organizations
-```
-M. Conway, 1968
-
-Therefore: Make sure the organization is compatible with the product architecture.
 
 ---
 
