--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ ___
 
 --
 
-- ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de) etc
+- ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://electric-cloud.com/devops-enterprise-summit/) etc
   - veelal gratis of goedkoop
   - soms met community training
 
@@ -340,19 +340,18 @@ Kies een specialisatie
 
 - Compute (Kubernetes, Docker, Mesos)
 
-- PAAS Platform ()
+- PAAS Platform
 
-- Storage (CEPH, )
-
+- Storage (CEPH, Flocker)
 
 - Networking ()
 
 - Cloud Security
 
---
-
 - Backup (& Restore)
+
 ---
+
 ## Kies een platform
 
 - AWS
@@ -360,6 +359,9 @@ Kies een specialisatie
 - CloudStack
 - Openstack
 - Cloud Foundry
+- [Triton](https://www.joyent.com/blog/triton-docker-and-the-best-of-all-worlds) (SmartOS)
+- VMware
+- Azure
 
 ---
 
@@ -368,14 +370,15 @@ Kies een specialisatie
 - AWS
 - Azure (ASM \> ARM)
 - GCE
+- RHCE
 
-## Ontwikkelen
+## Automation
 - Ansible (yaml)
-- Jenkins
+- [Jenkins](https://jenkins-ci.org)
 - TerraForm
--
+- [JuJu](https://jujucharms.com/store)
 
-
+---
 # Conclusie
 
 - Slechte Nieuws: het gaat snel
