--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ ___
 --
 
 Oplossing : immutable infrastracture
+Alles is code, geen _klikken_ meer als systeembeheerder.
 ---
 ## Networking
 --
@@ -304,7 +305,7 @@ ___
 - stap over naar dagelijks gebruik Linux/Unix, bv
   - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
-  - Ubuntu
+  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_)
 
 --
 
@@ -312,6 +313,7 @@ ___
 --
 
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
+  <br/> Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)
 
 --
 
@@ -324,7 +326,7 @@ ___
 --
 
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://electric-cloud.com/devops-enterprise-summit/) etc
-  - veelal gratis of goedkoop
+  - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training
 
 --
@@ -368,7 +370,7 @@ Kies een specialisatie
 ## Certificeringen
 
 - AWS
-- Azure (ASM \> ARM)
+- Azure (😬ASM → ARM)
 - GCE
 - RHCE
 
@@ -377,13 +379,15 @@ Kies een specialisatie
 - [Jenkins](https://jenkins-ci.org)
 - TerraForm
 - [JuJu](https://jujucharms.com/store)
+  <br/>Juju introductie [playlist](https://www.youtube.com/watch?v=yuIt8D5ijYQ&list=PLzSGDpUWtiotngRgVqpa8jeCBQ2CCjzfo), febr 2016
+  <br/>Begint met Mark Shuttleworth die het mooi treft met een mop over een programmeur in '90-er jaren. En dan de parallelen trekt naar _Configuration Management_ in 2016.
 
 ---
 # Conclusie
 
 - Slechte Nieuws: het gaat snel
 
-  - it's not all unicorns🦄, ponies, and rainbows
+  - it's not all unicorns🦄, ponies🐴, and rainbows🌈
 
   - leren, leren, leren
 --
