--- a/index.html
+++ b/index.html
@@ -146,19 +146,9 @@ DevOps:
 |Wired | Tired |Expired|
 |:---:|:---:|:----:|
 |LXD|VM|bare metal|
---
-
 |containers|VM |Zones |
---
-
 |[OCI](https://www.opencontainers.org) |  Docker|LXC |
---
-
 | [unikernels](http://dtrace.org/blogs/bmc/2016/01/22/unikernels-are-unfit-for-production/) |microservices|Monolithic|
---
-
-___
-
 
 ---
 
@@ -168,95 +158,54 @@ ___
 |Wired | Tired |Expired|
 |:---:|:---:|:----:|
 |DAS |  iSCSI| SAN|
---
-
 |JBOD|RAID6|RAID5|
---
-
 |3.5" FH|  2.5" | 15K rpm|
---
-
 |SATA | SAS| PATA|
---
-
 |NVMe | SSD |[SLC](http://0b4af6cdc2f0c5998459-c0245c5c937c5dedcca3f1764ecc9b2f.r43.cf2.rackcdn.com/23105-fast16-papers-schroeder.pdf)|
---
-
 |[SMR](https://en.wikipedia.org/wiki/Shingled_magnetic_recording)|WORM|TAPE|
---
-
 |[Quobyte](https://www.openstack.org/news/view/124/quobyte-releases-first-complete-fault-tolerant-storage-solution-for-openstack)|[ZFS](http://open-zfs.org/wiki/Distributions)|NTFS|
---
-
 |EMC|NetApp|IBM|
 
-___
---
-
 ---
-
 ## Security
-
---
 Mark Russinovich
 
 _There are two types of organisations: those who are hacked,_
-
---
 <br/> _.. and those who don't know they are hacked._
 
 ___
---
 
 Oplossing : immutable infrastracture
 <br/>Alles is code, geen _klikken_ meer als systeembeheerder.
 ---
 ## Networking
---
 
 |Wired | Tired |Expired|
 |:---:|:---:|:----:|
 |L3|VxLAN|L2|
---
-
 |40Gbit|10Gbit|1Gbit|
 |QSFP+|QSFP|SFP|
---
-
 |[OpenDayLight](https://www.opendaylight.org)|Arista|Cisco|
---
-
 |Ethernet|Infiniband|FC|
---
-
 |NuageNetwork|NSX|Nicera|
 
 ___
---
 
 - [When DevOps & Networking Intersect](https://www.youtube.com/watch?v=4DqxTVloBX8&index=33&list=PLMucAfE0Z-QnHsN_-Ci5e0nNQzItBr9Fz) (video)
 - [DevOps Networking Forum](http://www.linux.com/sign-up-to-watch-devops-networking-forum-videos) 17 maart 2016 (videos)
 
 ---
 ## Organisatie (1/2)
---
-
 ### Conway's Law (1968)
 ```
   Organizations which design systems
   are constrained to produce designs which
   are copies of the communication structures of these organizations
 ```
-
---
-
 _Therefore_ :
   <br/>Make sure the organization is compatible with the product architecture
 
 ___
-
---
-
 
 ```
   IT service managment:  In de business, de kelder of de cloud
@@ -274,18 +223,11 @@ Is there some way we can do DevOps without changing anything?
 [Andrew Clay Shafer](https://www.youtube.com/watch?v=P_sWGl7MzhU&t=1173)
 ___
 
---
 |Wired | Tired |Expired|
 |:---:|:---:|:----:|
 |[No-Ops](https://www.youtube.com/watch?v=Xg8pKjnHGyM&t=85)|[DevOps](http://itrevolution.com/books/phoenix-project-devops-book/)|ITIL|
---
-
 |Lean|iterative|waterfall|
---
-
 |[ScrumBan](http://www.agilerecord.com/scrumban-‒-differently-agile/)|KanBan|Scrum|
---
-
 |Lerende organisatie|bottum-up|top-down|
 
 ---
@@ -293,10 +235,9 @@ ___
 
 ### [Orchestration](https://www.youtube.com/watch?v=_uw1ISM_uRU)
 - Docker Swarm
-- Kubernetes
+- K[ubernetes](https://www.youtube.com/watch?v=ycE5ZxFLZ2Y&t=843)
 - CoreOS
 - Mesos / Mesposhere
---
 
 ### Cloud
 - OpenStack
@@ -319,31 +260,14 @@ ___
   - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
   - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_)
-
---
-
 - [leer](https://git-scm.com/book/) [git](http://www.neuro.polymtl.ca/tips_and_tricks/git) en open een [github](https://help.github.com) account
---
-
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
   <br/> Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)
-
---
-
 - gebruik vim, Sublime, Atom of VS Code
-
---
-
 - lees Hacker News https://news.ycombinator.com
-
---
-
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://electric-cloud.com/devops-enterprise-summit/) etc
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training
-
---
-
 - neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/home/)
 
 ---
@@ -353,9 +277,9 @@ Kies een specialisatie, platform, certificering of automation.
 
 ##Kies een specialisatie
 
-- Databases (Graph, Cassandra, ProgreSQL)
+- Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, ProgreSQL)
 - Compute (Kubernetes, Docker, Mesos)
-- PAAS Platform
+- PAAS Platform (OpenShift, Apcera, etc)
 - Storage (CEPH, Flocker)
 - Networking
 - Cloud Security
