Removed slide build-up, better for personal review (+typo)

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ ___
 
 ### [Orchestration](https://www.youtube.com/watch?v=_uw1ISM_uRU)
 - Docker Swarm
-- K[ubernetes](https://www.youtube.com/watch?v=ycE5ZxFLZ2Y&t=843)
+- [Kubernetes](https://www.youtube.com/watch?v=ycE5ZxFLZ2Y&t=843)
 - CoreOS
 - Mesos / Mesposhere
 
