link added to Azure ARM certification

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Kies een specialisatie, platform, certificering of automation.
 ## Óf haal een Certificeringen
 
 - AWS
-- Azure (😬ASM → ARM)
+- Azure (10 maart 😬 [ASM → ARM](http://buildazure.com/2016/02/28/azure-cert-exam-update-march-10-2016/))
 - GCE
 - RHCE
 - Security ([CCSK](https://cloudsecurityalliance.org/education/ccsk/), [CCSP](https://www.isc2.org/ccsp/default.aspx), ...)
