added more links

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ grep '^# ' index.html | grep -v '<br' | tr '#' '-'^C
 - Microservices
 - Databases
 
-DevOps:
-- Continuous Delivery/Deployment
+[DevOps](https://en.wikipedia.org/wiki/The_Phoenix_Project_(novel)):
+- [Continuous Delivery](http://www.informit.com/title/9780321601919)/Deployment
 - Continuous Integration
-- alles is code, immutable infrastructure
+- alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), immutable infrastructure
 - [12 factor apps](http://12factor.net)
 
 
@@ -148,7 +148,7 @@ DevOps:
 |LXD|VM|bare metal|
 |containers|VM |Zones |
 |[OCI](https://www.opencontainers.org) |  Docker|LXC |
-| [unikernels](http://dtrace.org/blogs/bmc/2016/01/22/unikernels-are-unfit-for-production/) |microservices|Monolithic|
+| [unikernels](http://dtrace.org/blogs/bmc/2016/01/22/unikernels-are-unfit-for-production/) |[microservices](http://shop.oreilly.com/product/0636920033158.do)|Monolithic|
 
 ---
 
@@ -176,7 +176,7 @@ _There are two types of organisations: those who are hacked,_
 ___
 
 Oplossing : immutable infrastracture
-<br/>Alles is code, geen _klikken_ meer als systeembeheerder.
+<br/>Alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), geen _klikken_ meer als systeembeheerder.
 ---
 ## Networking
 
