--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ grep '^# ' index.html | grep -v '<br' | tr '#' '-'^C
 - Microservices
 - Databases
 
-[DevOps](https://en.wikipedia.org/wiki/The_Phoenix_Project_(novel)):
+[DevOps](https://en.wikipedia.org/wiki/The_Phoenix_Project_(novel):
 - [Continuous Delivery](http://www.informit.com/title/9780321601919)/Deployment
 - Continuous Integration
 - alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), immutable infrastructure
@@ -169,11 +169,10 @@ grep '^# ' index.html | grep -v '<br' | tr '#' '-'^C
 ---
 ## Security
 Mark Russinovich
-
-_There are two types of organisations: those who are hacked,_
-<br/> _.. and those who don't know they are hacked._
-
-___
+```
+There are two types of organisations: those who are hacked,
+and those who don't know they are hacked.
+```
 
 Oplossing : immutable infrastracture
 <br/>Alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), geen _klikken_ meer als systeembeheerder.
