minor updates, safaribooksonline in detail

--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@ ___
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://electric-cloud.com/devops-enterprise-summit/) etc
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training
-- neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/home/)
+- neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/home/) €400/jaar 
+  <br/> 22.000 boeken vaak ook in preview, opnames van alle O'reilly conferenties, studie plannen, offline op iOS/Android, etc 
 
 ---
 # Stap twee (1/4)
