safaribooksonline minor edit

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ ___
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training
 - neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/home/) €400/jaar 
-  - 22.000 boeken, zo-goed-als-alle DevOps/CloudNative boeken, vaak ook in preview
+  - zo-goed-als-alle DevOps/CloudNative boeken, >22.000, ook previews
   - opnames van alle O'reilly conferenties
   - studie plannen
   - offline op iOS/Android
