--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ class: title
       // Set the slideshow display ratio
       // Default: '4:3'
       // Alternatives: '16:9', ...
-      // ratio: '16:9',
+      ratio: '16:9',
 
       // Navigation options
       navigation: {
