--- a/index.html
+++ b/index.html
@@ -255,23 +255,25 @@ ___
 ---
 # Eerste stappen
 
-- stap over naar dagelijks gebruik Linux/Unix, bv
+- stap over naar dagelijks gebruik Linux/Unix, bv <small>
   - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
-  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_)
+  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_)</small>
 - [leer](https://git-scm.com/book/) [git](http://www.neuro.polymtl.ca/tips_and_tricks/git) en open een [github](https://help.github.com) account
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
-  <br/> Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)
+  - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, Sublime, Atom of VS Code
 - lees Hacker News https://news.ycombinator.com
-- ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://electric-cloud.com/devops-enterprise-summit/) etc
+- ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://itrevolution.com/devops-enterprise-summit/) etc<small>
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
-  - soms met community training
-- neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/home/) €400/jaar 
-  - zo-goed-als-alle DevOps/CloudNative boeken, >22.000, ook previews
-  - opnames van alle O'reilly conferenties
-  - studie plannen
-  - offline op iOS/Android
+  - soms met community training </small>
+- neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/our-library/) [€400/jaar](https://www.safaribooksonline.com/pricing/) <small>
+  - \>35.000 boeken online leesbaar, nieuwe boeken meteen beschikbaar. Inclusief alle [Early Access](http://shop.oreilly.com/category/early-release.do)
+  - zo-goed-als-alle DevOps/CloudNative boeken
+  - exclusief toegang tot alle opnames van [O'reilly conferenties](https://www.safaribooksonline.com/search/?query=conference&sort=publication_date&formats=video&publishers=O%27Reilly%20Media%2C%20Inc.&highlight=true) (ipv. $1000-1500/conferentie)
+  - [studie plannen](https://www.safaribooksonline.com/learning-paths/) & [tutorials](https://www.safaribooksonline.com/tutorials/)
+  - offline [apps](https://www.safaribooksonline.com/apps/) op [iOS](https://itunes.apple.com/us/app/safari-to-go/id881697395)/[Android](https://play.google.com/store/apps/details?id=com.safariflow.queue)
+</small>
 
 ---
 # Stap twee (1/4)
