--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ ___
 ### [Orchestration](https://www.youtube.com/watch?v=_uw1ISM_uRU)
 - Docker Swarm
 - [Kubernetes](https://www.youtube.com/watch?v=ycE5ZxFLZ2Y&t=843)
-- CoreOS
+- [CoreOS Fleet](https://coreos.com/using-coreos/clustering/)
 - Mesos / Mesposhere
 
 ### Cloud
@@ -258,12 +258,12 @@ ___
 - stap over naar dagelijks gebruik Linux/Unix, bv <small>
   - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
-  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_)</small>
+  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_) (op [Chromebook](https://github.com/iantrich/ChrUbuntu-Guides/) bv met [crouton]https://github.com/dnschneid/crouton))</small>
 - [leer](https://git-scm.com/book/) [git](http://www.neuro.polymtl.ca/tips_and_tricks/git) en open een [github](https://help.github.com) account
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
   - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, Sublime, Atom of VS Code
-- lees Hacker News https://news.ycombinator.com
+- lees Hacker News https://news.ycombinator.com ([:neckbeard:](https://github.com/donnemartin/haxor-news))
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://itrevolution.com/devops-enterprise-summit/) etc<small>
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training </small>
@@ -283,7 +283,7 @@ Kies een specialisatie, platform, certificering of automation.
 ##Kies een specialisatie
 
 - Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, ProgreSQL)
-- Compute (Kubernetes, Docker, Mesos)
+- Orchestration (Kubernetes, Docker, Mesos)
 - PAAS Platform (OpenShift, Apcera, etc)
 - Storage (CEPH, Flocker)
 - Networking
@@ -316,6 +316,7 @@ Kies een specialisatie, platform, certificering of automation.
 - GCE
 - RHCE
 - Security ([CCSK](https://cloudsecurityalliance.org/education/ccsk/), [CCSP](https://www.isc2.org/ccsp/default.aspx), ...)
+- [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path)
 
 ---
 # Stap twee (4/4)
