Updated CoreOS references

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ grep '^# ' index.html | grep -v '<br' | tr '#' '-'^C
 [DevOps](https://en.wikipedia.org/wiki/The_Phoenix_Project_(novel):
 - [Continuous Delivery](http://www.informit.com/title/9780321601919)/Deployment
 - Continuous Integration
-- alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), immutable infrastructure
+- alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), [immutable infrastructure](http://thenewstack.io/a-brief-look-at-immutable-infrastructure-and-why-it-is-such-a-quest/)
 - [12 factor apps](http://12factor.net)
 
 
@@ -298,6 +298,7 @@ Kies een specialisatie, platform, certificering of automation.
 
 - AWS
 - Kubernetes
+- CoreOS [Fleet](https://coreos.com/using-coreos/clustering/) / [rkt](https://coreos.com/rkt/)
 - CloudStack
 - Openstack
 - Cloud Foundry
