--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@ Oplossing : immutable infrastracture
 
 ___
 
-- [When DevOps & Networking Intersect](https://www.youtube.com/watch?v=4DqxTVloBX8&index=33&list=PLMucAfE0Z-QnHsN_-Ci5e0nNQzItBr9Fz) (video)
-- [DevOps Networking Forum](http://www.linux.com/sign-up-to-watch-devops-networking-forum-videos) 17 maart 2016 (videos)
+- When DevOps & Networking Intersect [video](https://www.youtube.com/watch?v=4DqxTVloBX8&index=33&list=PLMucAfE0Z-QnHsN_-Ci5e0nNQzItBr9Fz)
+- [DevOps Networking Forum](https://www.youtube.com/playlist?list=PLGeM09tlguZRmQIO-K2tseTDCMcVxy17Y) 17 maart 2016 ([all videos](https://www.linux.com/news/watch-recorded-sessions-devops-networking-forum))
+- Open Networkig Summit 2016 ([videos](https://www.youtube.com/playlist?list=PLGeM09tlguZQo9qAFIxF_TpNxlfGgJVUN))
+- [OpenDaylight Developer Design Forum 2016](http://events.linuxfoundation.org/events/opendaylight-developer-design-forum)
 
 ---
 ## Organisatie (1/2)
@@ -258,12 +260,13 @@ ___
 - stap over naar dagelijks gebruik Linux/Unix, bv <small>
   - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
-  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_) (op [Chromebook](https://github.com/iantrich/ChrUbuntu-Guides/) bv met [crouton]https://github.com/dnschneid/crouton))</small>
+  - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_) (op [Chromebook](https://github.com/iantrich/ChrUbuntu-Guides/) bv met [crouton](https://github.com/dnschneid/crouton))</small>
 - [leer](https://git-scm.com/book/) [git](http://www.neuro.polymtl.ca/tips_and_tricks/git) en open een [github](https://help.github.com) account
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
   - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, Sublime, Atom of VS Code
-- lees Hacker News https://news.ycombinator.com ([:neckbeard:](https://github.com/donnemartin/haxor-news))
+- [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](http://martinfowler.com/bliki/ContinuousDelivery.html) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), etc.</small>
+- lees Hacker News https://news.ycombinator.com ([nerds](https://github.com/donnemartin/haxor-news))
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://itrevolution.com/devops-enterprise-summit/) etc<small>
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training </small>
@@ -282,7 +285,7 @@ Kies een specialisatie, platform, certificering of automation.
 
 ##Kies een specialisatie
 
-- Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, ProgreSQL)
+- Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, ProgreSQL, <small>maar [níet MSSQL](https://www.youtube.com/watch?v=PKfvMQx2dBE&feature=youtu.be&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=2240)</small>)
 - Orchestration (Kubernetes, Docker, Mesos)
 - PAAS Platform (OpenShift, Apcera, etc)
 - Storage (CEPH, Flocker)
@@ -298,7 +301,7 @@ Kies een specialisatie, platform, certificering of automation.
 
 - AWS
 - Kubernetes
-- CoreOS [Fleet](https://coreos.com/using-coreos/clustering/) / [rkt](https://coreos.com/rkt/)
+- CoreOS [fleet](https://coreos.com/using-coreos/clustering/) / [rkt](https://coreos.com/rkt/)
 - CloudStack
 - Openstack
 - Cloud Foundry
@@ -315,7 +318,8 @@ Kies een specialisatie, platform, certificering of automation.
 - AWS
 - Azure (10 maart 😬 [ASM → ARM](http://buildazure.com/2016/02/28/azure-cert-exam-update-march-10-2016/))
 - GCE
-- RHCE
+- RHCSA / RHCE
+- [Jenkins](https://www.cloudbees.com/jenkins-certification) <small>([Groovy](https://news.ycombinator.com/item?id=11362772))</small>
 - Security ([CCSK](https://cloudsecurityalliance.org/education/ccsk/), [CCSP](https://www.isc2.org/ccsp/default.aspx), ...)
 - [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path)
 
@@ -326,14 +330,13 @@ Kies een specialisatie, platform, certificering of automation.
 
 ## Óf kies een _automation_
 - [Ansible](https://www.ansible.com/webinars-training) (yaml)
-- [Jenkins](https://jenkins-ci.org)
+- verdiep in een CI/CD platform (zie Stap 1)
 - [TerraForm](https://www.airpair.com/aws/posts/ntiered-aws-docker-terraform-guide)
 - [Go](http://www.infoq.com/presentations/go-iron-production)
-- [JuJu](https://jujucharms.com/store)
-  <br/>Juju introductie [playlist](https://www.youtube.com/watch?v=yuIt8D5ijYQ&list=PLzSGDpUWtiotngRgVqpa8jeCBQ2CCjzfo), febr 2016
-  <br/>Begint met Mark Shuttleworth die een mop vertelt over een programmeur in '90-er jaren. En dan de parallelen trekt naar _Configuration Management_ in 2016.
+- [JuJu](https://jujucharms.com/store)<small>
+  <br/>[Juju introductie videos](https://www.youtube.com/watch?v=yuIt8D5ijYQ&list=PLzSGDpUWtiotngRgVqpa8jeCBQ2CCjzfo), febr 2016. Begint met Mark Shuttleworth die een mop vertelt over een programmeur in '90-er jaren. En dan de parallelen trekt naar _Configuration Management_ in 2016.</small>
 
-(beter geen Puppet of Chef, te veel _enterpise_)
+<small>(beter niet beginnen met Puppet, Chef of DSC,  die zijn te veel _enterpise_)</small>
 
 ---
 # Conclusie
@@ -342,7 +345,7 @@ Kies een specialisatie, platform, certificering of automation.
 
   - it's not all unicorns🦄, ponies🐴, and rainbows🌈
 
-  - leren, leren, [leren](Seven Sins of Scrum and other Agile Antipatterns)
+  - leren, leren, [leren]([Seven Sins of Scrum and other Agile Antipatterns])
 --
 
 - Good news: ook met Cloud technieken is er werk voor *Operations*
