--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ ___
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
   - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, Sublime, Atom of VS Code
-- [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](http://martinfowler.com/bliki/ContinuousDelivery.html) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), etc.</small>
-- lees Hacker News https://news.ycombinator.com ([nerds](https://github.com/donnemartin/haxor-news))
+- [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](https://www.go.cd/2016/01/25/are-you-ready-for-continuous-delivery/) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), [GoCD](https://www.go.cd), [Snap](https://snap-ci.com), [Packer](https://www.packer.io/intro/use-cases.html), etc.</small>
+- lees Hacker News https://news.ycombinator.com <small>([21 ways to read](http://hackerbits.com/uncategorized/improve-hacker-news-ui/), for [nerds](https://github.com/donnemartin/haxor-news))</small>
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://itrevolution.com/devops-enterprise-summit/) etc<small>
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
   - soms met community training </small>
@@ -321,7 +321,7 @@ Kies een specialisatie, platform, certificering of automation.
 - RHCSA / RHCE
 - [Jenkins](https://www.cloudbees.com/jenkins-certification) <small>([Groovy](https://news.ycombinator.com/item?id=11362772))</small>
 - Security ([CCSK](https://cloudsecurityalliance.org/education/ccsk/), [CCSP](https://www.isc2.org/ccsp/default.aspx), ...)
-- [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path)
+- [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path) / [Neo4j](http://neo4j.com/graphacademy/neo4j-certification/)
 
 ---
 # Stap twee (4/4)
@@ -336,7 +336,7 @@ Kies een specialisatie, platform, certificering of automation.
 - [JuJu](https://jujucharms.com/store)<small>
   <br/>[Juju introductie videos](https://www.youtube.com/watch?v=yuIt8D5ijYQ&list=PLzSGDpUWtiotngRgVqpa8jeCBQ2CCjzfo), febr 2016. Begint met Mark Shuttleworth die een mop vertelt over een programmeur in '90-er jaren. En dan de parallelen trekt naar _Configuration Management_ in 2016.</small>
 
-<small>(beter niet beginnen met Puppet, Chef of DSC,  die zijn te veel _enterpise_)</small>
+<small>(beter niet beginnen met Puppet, Chef of DSC, die zijn te veel _enterpise_ of [werken niet (DCS)](https://www.youtube.com/watch?v=PKfvMQx2dBE&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=1516))</small>
 
 ---
 # Conclusie
