added links to brainrules

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ Kies een specialisatie, platform, certificering of automation.
 
   - it's not all unicorns🦄, ponies🐴, and rainbows🌈
 
-  - leren, leren, [leren]([Seven Sins of Scrum and other Agile Antipatterns])
+  - [leren](https://vimeo.com/16335525), leren, [leren]([Seven Sins of Scrum and other Agile Antipatterns])
 --
 
 - Good news: ook met Cloud technieken is er werk voor *Operations*
@@ -354,7 +354,7 @@ Kies een specialisatie, platform, certificering of automation.
 
   - building, packaging, distributing apps
 
-  - [leren](https://www.youtube.com/watch?v=P_sWGl7MzhU&t=1204), leren, leren
+  - [leren](https://www.youtube.com/watch?v=P_sWGl7MzhU&t=1204), [leren](http://brainrules.net/short-term-memory), [leren](http://brainrules.net/long-term-memory)
 
 
 ---
