--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ class: title
 ### Bart
 
     </textarea>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
+    <script src="http://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
     var slideshow = remark.create({
