--- a/index.html
+++ b/index.html
@@ -209,10 +209,13 @@ _Therefore_ :
 ___
 
 ```
-  IT service managment:  In de business, de kelder of de cloud
+  IT service management:  In de business, de kelder of de cloud
 ```
   [David Cannon van Forrester](http://www.automatiseringgids.nl/nieuws/2016/11/it-service-manager-staat-op)
-  <br/>op Ngi-NGN congres 17 maart 2016
+  <br/>op Ngi-NGN congres 17 maart 2016.
+
+  ___
+  Op de ALV van 25 mei 2016 is unaniem besloten om [itSMF](http://www.itsmf.nl) Nederland op te heffen per 1 juni 2016.
 
 ---
 ## Organisatie (2/2)
@@ -265,7 +268,7 @@ ___
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
   - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, Sublime, Atom of VS Code
-- [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](https://www.go.cd/2016/01/25/are-you-ready-for-continuous-delivery/) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), [GoCD](https://www.go.cd), [Snap](https://snap-ci.com), [Packer](https://www.packer.io/intro/use-cases.html), etc.</small>
+- [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](https://www.go.cd/2016/01/25/are-you-ready-for-continuous-delivery/) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), [GoCD](https://www.go.cd), [Snap](https://snap-ci.com), [Packer](https://www.packer.io/intro/use-cases.html), [etc.](http://webwereld.nl/development/93555-7-devops-alternatieven-voor-jenkins)</small>
 - lees Hacker News https://news.ycombinator.com <small>([21 ways to read](http://hackerbits.com/uncategorized/improve-hacker-news-ui/), for [nerds](https://github.com/donnemartin/haxor-news))</small>
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), [DOES](http://itrevolution.com/devops-enterprise-summit/) etc<small>
   - veelal gratis, goedkoop of op video beschikbaar (bv [DOES2015](https://www.youtube.com/watch?v=-S8-lrm3iV4&list=PLGB2s-U5FSWMNsZQQOUUr9Nv9i-flsUJk) / [2014](https://www.youtube.com/user/DOES2014/videos))
