added: SRE's jobs is to automate themselves out-of-a-job

--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@ and those who don't know they are hacked.
 
 Oplossing : immutable infrastracture
 <br/>Alles is [code](https://info.thoughtworks.com/Infrastructure-as-Code-Kief-Morris.html), geen _klikken_ meer als systeembeheerder.
+
+___
+<br/>
+
+```
+At Google we have Site Reliability Engineers SREs, think of them as Operators with an PhD.
+Their job is to automate themselves out of a job.
+```
+<small>[John Wilkes at Google Faculty Summit, 2011](https://www.youtube.com/watch?v=0ZFMlO98Jkc&t=26m21s)</small>
 ---
 ## Networking
 
@@ -306,7 +315,7 @@ Kies een specialisatie, platform, certificering of automation.
 - Kubernetes
 - CoreOS [fleet](https://coreos.com/using-coreos/clustering/) / [rkt](https://coreos.com/rkt/)
 - CloudStack
-- Openstack
+- OpenStack
 - Cloud Foundry
 - [Triton](https://www.joyent.com/blog/triton-docker-and-the-best-of-all-worlds) (SmartOS)
 - VMware
@@ -339,7 +348,7 @@ Kies een specialisatie, platform, certificering of automation.
 - [JuJu](https://jujucharms.com/store)<small>
   <br/>[Juju introductie videos](https://www.youtube.com/watch?v=yuIt8D5ijYQ&list=PLzSGDpUWtiotngRgVqpa8jeCBQ2CCjzfo), febr 2016. Begint met Mark Shuttleworth die een mop vertelt over een programmeur in '90-er jaren. En dan de parallelen trekt naar _Configuration Management_ in 2016.</small>
 
-<small>(beter niet beginnen met Puppet, Chef of DSC, die zijn te veel _enterpise_ of [werken niet (DCS)](https://www.youtube.com/watch?v=PKfvMQx2dBE&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=1516))</small>
+<small>(beter niet beginnen met Puppet, Chef of DSC, die zijn te veel _enterprise_ of [werken niet (DCS)](https://www.youtube.com/watch?v=PKfvMQx2dBE&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=1516))</small>
 
 ---
 # Conclusie
