more git and github learning materials

--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@ ___
   - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
   - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_) (op [Chromebook](https://github.com/iantrich/ChrUbuntu-Guides/) bv met [crouton](https://github.com/dnschneid/crouton))</small>
-- [leer](https://git-scm.com/book/) [git](http://www.neuro.polymtl.ca/tips_and_tricks/git) en open een [github](https://help.github.com) account
+- [leer](https://git-scm.com/book/) [git](http://www.neuro.polymtl.ca/tips_and_tricks/git) en open een [github](https://github.com/join) account
+- horloge [GitHub Training Youtube](https://www.youtube.com/c/githubguides)
+- bijwonen [GitHub Training Classes](https://services.github.com/training)
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764)
   - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, emacs, Sublime, Atom of VS Code
