--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Kies een specialisatie, platform, certificering of automation.
 - CloudStack
 - OpenStack
 - Cloud Foundry
-- [Triton](https://www.joyent.com/blog/triton-docker-and-the-best-of-all-worlds) (SmartOS)
+- [Samsung](https://www.joyent.com/blog/joyent-and-samsung-thoughts-after-the-close) [Triton](https://www.joyent.com/blog/triton-docker-and-the-best-of-all-worlds) ([SmartOS](https://smartos.org))
 - VMware
 - Azure
 
@@ -328,13 +328,16 @@ Kies een specialisatie, platform, certificering of automation.
 
 ## Óf haal een Certificeringen
 
-- AWS
-- Azure (10 maart 😬 [ASM → ARM](http://buildazure.com/2016/02/28/azure-cert-exam-update-march-10-2016/))
-- GCE
-- RHCSA / RHCE
-- [Jenkins](https://www.cloudbees.com/jenkins-certification) <small>([Groovy](https://news.ycombinator.com/item?id=11362772))</small>
-- Security ([CCSK](https://cloudsecurityalliance.org/education/ccsk/), [CCSP](https://www.isc2.org/ccsp/default.aspx), ...)
-- [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path) / [Neo4j](http://neo4j.com/graphacademy/neo4j-certification/)
+- AWS - [Associate](https://aws.amazon.com/certification/certified-solutions-architect-associate/) $150 - [Professional](https://aws.amazon.com/certification/certified-solutions-architect-professional/) $300 - [DevOps Engineer](https://aws.amazon.com/certification/certified-devops-engineer-professional/) $300
+- Azure ([10 maart](http://buildazure.com/2016/02/28/azure-cert-exam-update-march-10-2016/) 😬 [ASM](https://msdn.microsoft.com/en-us/library/azure/mt420161.aspx) XML → [ARM](https://msdn.microsoft.com/en-us/library/azure/dn790568.aspx) REST) €165 - [Ops](https://www.microsoft.com/en-us/learning/mcsa-linux-azure-certification.aspx): [533](https://www.microsoft.com/en-us/learning/exam-70-533.aspx)+LFCS - [Dev](https://www.microsoft.com/en-us/learning/mcsd-azure-architect-certification.aspx): [532](https://www.microsoft.com/en-us/learning/exam-70-532.aspx)+[533](https://www.microsoft.com/en-us/learning/exam-70-533.aspx)+[534](https://www.microsoft.com/en-us/learning/exam-70-534.aspx)
+- [Google Cloud Platform](https://cloud.google.com/training/exams/) $100 - [Dev](https://cloud.google.com/training/exams/solndev) - [Ops](https://cloud.google.com/training/exams/sysops) - [Machine Learning](https://cloud.google.com/training/exams/dataanalyst)
+- Linux Foundation <small>(keuze Ubuntu _of_ RedHat)</small> - [SysAdmin LFCS](https://training.linuxfoundation.org/certification/lfcs) $300 (course + training) - [Engineer LFCE](https://training.linuxfoundation.org/certification/lfce) $300
+- RedHat $500 - [RHCSA](https://www.redhat.com/en/services/training/ex200-red-hat-certified-system-administrator-rhcsa-exam) - [RHCE](https://www.redhat.com/en/services/certification/rhce) 🤑 - [DevOps](https://www.redhat.com/en/services/certification/rhca/devops) 5 examens 😰
+- OpenStack - Mirantis [MCA100 theorie](https://training.mirantis.com/exam/openstack-exam-mca100) $300 - [MCA200 hands-on](https://training.mirantis.com/instructor-led-training/openstack-exam-mca200) $600 - RedHat [performance based](https://www.redhat.com/en/services/training/ex210-red-hat-certified-system-administrator-red-hat-openstack-exam) $600
+- Jenkins v1.625.2 [CJE](https://www.cloudbees.com/jenkins-certification) $200 (v2.0 met [Groovy](https://news.ycombinator.com/item?id=11362772))
+- Security ([CCSK](https://cloudsecurityalliance.org/education/ccsk/), [CCSP](https://www.isc2.org/ccsp/default.aspx), [CEH](https://cert.eccouncil.org/application-process-eligibility.html), ...)
+- [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path) [$300](http://www.oreilly.com/data/cassandracert)/ [Neo4j](http://neo4j.com/graphacademy/neo4j-certification/) [free](http://chrisvoncsefalvay.com/10-tips-for-passing-the-neo4j-certified-professional-examination/)
+- GitHub geruchten ....
 
 ---
 # Stap twee (4/4)
