--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ ___
 - [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](https://www.go.cd/2016/01/25/are-you-ready-for-continuous-delivery/) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), [GoCD](https://www.go.cd), [Snap](https://snap-ci.com), [Packer](https://www.packer.io/intro/use-cases.html), [AWS Code services](https://aws.amazon.com/awscode/), [GitLab-ci](https://about.gitlab.com/gitlab-ci/) [etc.](http://webwereld.nl/development/93555-7-devops-alternatieven-voor-jenkins)</small>
 - lees Hacker News https://news.ycombinator.com <small>([21 ways to read](http://hackerbits.com/uncategorized/improve-hacker-news-ui/), for [nerds](https://github.com/donnemartin/haxor-news))</small>
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), etc<small>
-  - veelal gratis, goedkoop of op video beschikbaar (bv DevOpsdays [['13](https://vimeo.com/album/2438084), ['14](https://vimeo.com/album/2438084), ['15](https://vimeo.com/album/3468700)], [Winter Wonderland](https://www.youtube.com/playlist?list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ))
+  - veelal gratis, goedkoop of op video beschikbaar (bv DevOpsdays [['13](https://vimeo.com/album/2438084), ['14](https://www.youtube.com/playlist?list=PLJYmpyz1ac9hML4uaSWWs0rzaPn_uMWwT), ['15](https://vimeo.com/album/3468700)], [Winter Wonderland](https://www.youtube.com/playlist?list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ))
   - soms met community training </small>
 - neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/our-library/) [€400/jaar](https://www.safaribooksonline.com/pricing/) <small>
   - \>35.000 boeken online leesbaar, nieuwe boeken meteen beschikbaar. Inclusief alle [Early Access](http://shop.oreilly.com/category/early-release.do)
@@ -298,7 +298,7 @@ Kies een specialisatie, platform, certificering of automation.
 
 ##Kies een specialisatie
 
-- Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, ProgreSQL, <small>maar [níet MSSQL](https://www.youtube.com/watch?v=PKfvMQx2dBE&feature=youtu.be&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=2240)</small>)
+- Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, PostgreSQL, <small>maar [níet MSSQL](https://www.youtube.com/watch?v=PKfvMQx2dBE&feature=youtu.be&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=2240)</small>)
 - Orchestration (Kubernetes, Docker, Mesos)
 - PAAS Platform (OpenShift, Apcera, etc)
 - Storage (CEPH, Flocker)
@@ -336,7 +336,7 @@ Kies een specialisatie, platform, certificering of automation.
 - OpenStack - [COA](https://www.openstack.org/coa) hands-on $300 - [Mirantis](https://www.mirantis.com/blog/mirantis-training-openstack-foundation-certification-exam/) [theorie](https://training.mirantis.com/exam/openstack-exam-mca100) $300 - [hands-on](https://training.mirantis.com/instructor-led-training/openstack-exam-mca200) $600 - [RedHat](https://www.redhat.com/en/services/training/ex210-red-hat-certified-system-administrator-red-hat-openstack-exam) hands-on $600
 - CI/CD - Jenkins v1.625.2 [CJE](https://www.cloudbees.com/jenkins-certification) $200 <small>(v2.0 met [DSL](https://news.ycombinator.com/item?id=11362772))</small> - [Ansible](https://www.redhat.com/en/services/training/ex407-red-hat-certificate-expertise-ansible-automation) $600 - [Puppet](https://puppet.com/support-services/certification/professional-overview) $200 - [RedHat Puppet](https://www.redhat.com/en/services/training/ex405-red-hat-certificate-expertise-configuration-management-puppet) $600
 - Security - [CCSK](https://cloudsecurityalliance.org/education/ccsk/) [$345](https://ccsk.cloudsecurityalliance.org)<small> voor de eerste 2 examens</small> - [CCSP](https://www.isc2.org/ccsp/default.aspx) [$549 + $100/jaar](https://www.isc2.org/ccsp-faqs/default.aspx) - [CEH](https://cert.eccouncil.org/application-process-eligibility.html) [$600](https://store.eccouncil.org/product/ceh-vue-exam-voucher/)
-- Databases - [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path) [$300](http://www.oreilly.com/data/cassandracert) - [Neo4j](http://neo4j.com/graphacademy/neo4j-certification/) [free](http://chrisvoncsefalvay.com/10-tips-for-passing-the-neo4j-certified-professional-examination/)
+- Databases - [Cassandra](https://academy.datastax.com/certifications/cassandra-administrator#Path) [$300](http://www.oreilly.com/data/cassandracert) - [Neo4j](http://neo4j.com/graphacademy/neo4j-certification/) [free](http://chrisvoncsefalvay.com/10-tips-for-passing-the-neo4j-certified-professional-examination/) - [PostgreSQL](http://www.enterprisedb.com/training/certification) $200 [Associate](http://www.enterprisedb.com/store/products/dba-training/01t50000001Nyi7AAC) & [Prof](http://www.enterprisedb.com/store/products/dba-training/01t50000001NyiCAAS)
 - GitHub geruchten ....
 
 ---
@@ -352,7 +352,7 @@ Kies een specialisatie, platform, certificering of automation.
 - [JuJu](https://jujucharms.com/store)<small>
   <br/>[Juju introductie videos](https://www.youtube.com/watch?v=yuIt8D5ijYQ&list=PLzSGDpUWtiotngRgVqpa8jeCBQ2CCjzfo), febr 2016. Begint met Mark Shuttleworth die een mop vertelt over een programmeur in '90-er jaren. En dan de parallelen trekt naar _Configuration Management_ in 2016.</small>
 
-<small>(beter niet beginnen met Puppet, [Chef](https://training.chef.io/category/self-paced-training) of DSC, die zijn te veel _enterprise_ of [werken niet (DCS)](https://www.youtube.com/watch?v=PKfvMQx2dBE&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=1516))</small>
+<small>(beter niet beginnen met Puppet, [Chef](https://training.chef.io/category/self-paced-training) of DSC, die zijn te veel _enterprise_ of [werken niet (DCS)](https://www.youtube.com/watch?v=PKfvMQx2dBE&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=1516). [CFegine](https://en.wikipedia.org/wiki/CFEngine) & [SaltStack](https://saltstack.com) zijn [historisch](https://en.wikipedia.org/wiki/Comparison_of_open-source_configuration_management_software))</small>
 
 ---
 # Conclusie
