--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ ___
 - [leer een](https://news.ycombinator.com/item?id=11362550) [CI](http://www.martinfowler.com/articles/continuousIntegration.html)/[CD](https://www.go.cd/2016/01/25/are-you-ready-for-continuous-delivery/) [pipeline](http://www.informit.com/articles/article.aspx?p=1621865&seqNum=2)<small>: [Travis-CI](https://travis-ci.org), [Jenkins](https://jenkins.io), [Drone](https://drone.io), [TeamCity](https://www.jetbrains.com/teamcity/), [ConCourse](https://concourse.ci), [Bamboo](https://www.atlassian.com/software/bamboo), [Wercker](http://wercker.com) ([nl!](http://wercker.com/about/)), [GoCD](https://www.go.cd), [Snap](https://snap-ci.com), [Packer](https://www.packer.io/intro/use-cases.html), [AWS Code services](https://aws.amazon.com/awscode/), [GitLab-ci](https://about.gitlab.com/gitlab-ci/) [etc.](http://webwereld.nl/development/93555-7-devops-alternatieven-voor-jenkins)</small>
 - lees Hacker News https://news.ycombinator.com <small>([21 ways to read](http://hackerbits.com/uncategorized/improve-hacker-news-ui/), for [nerds](https://github.com/donnemartin/haxor-news))</small>
 - ga naar [meetups](https://www.meetup.com/find/?allMeetups=true&radius=50&userFreeform=utrecht&mcName=Utrecht%2C+Utrecht%2C+NL&sort=member_count), [cfgmgmtcamp](https://cfgmgmtcamp.eu), [softwarecircus](https://www.youtube.com/watch?v=Xg8pKjnHGyM&index=7&list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ), [DevOpsdays](http://www.devopsdays.org/events/2016-amsterdam/), [containerdays](http://www.containerdays.de), etc<small>
-  - veelal gratis, goedkoop of op video beschikbaar (bv DevOpsdays [['13](https://vimeo.com/album/2438084), ['14](https://www.youtube.com/playlist?list=PLJYmpyz1ac9hML4uaSWWs0rzaPn_uMWwT), ['15](https://vimeo.com/album/3468700)], [Winter Wonderland](https://www.youtube.com/playlist?list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ))
+  - veelal gratis, goedkoop of op video beschikbaar (bv DevOpsdays [['13](https://vimeo.com/album/2438084), ['14](https://www.youtube.com/playlist?list=PLJYmpyz1ac9hML4uaSWWs0rzaPn_uMWwT), ['15](https://vimeo.com/album/3468700), ['16](https://vimeo.com/album/4033902)], [Winter Wonderland](https://www.youtube.com/playlist?list=PLzSGDpUWtiovTDzulhcHqnZDR__oJHAKQ))
   - soms met community training </small>
 - neem abonnement op [safaribooksonline](https://www.safaribooksonline.com/our-library/) [€400/jaar](https://www.safaribooksonline.com/pricing/) <small>
   - \>35.000 boeken online leesbaar, nieuwe boeken meteen beschikbaar. Inclusief alle [Early Access](http://shop.oreilly.com/category/early-release.do)
@@ -312,7 +312,7 @@ Kies een specialisatie, platform, certificering of automation.
 
 ## Óf kies een platform
 
-- AWS
+- AWS ([6th year leader in IAAS Gartner Magic Quadrant](https://aws.amazon.com/resources/gartner-2016-mq-learn-more/))
 - Kubernetes
 - CoreOS [fleet](https://coreos.com/using-coreos/clustering/) / [rkt](https://coreos.com/rkt/)
 - CloudStack
